Update SelectorGui.java